; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-renesas-intc-irqpin.c_intc_irqpin_irq_write_hwirq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-renesas-intc-irqpin.c_intc_irqpin_irq_write_hwirq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intc_irqpin_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intc_irqpin_priv*, i32, i32)* @intc_irqpin_irq_write_hwirq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intc_irqpin_irq_write_hwirq(%struct.intc_irqpin_priv* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.intc_irqpin_priv*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.intc_irqpin_priv* %0, %struct.intc_irqpin_priv** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.intc_irqpin_priv*, %struct.intc_irqpin_priv** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load %struct.intc_irqpin_priv*, %struct.intc_irqpin_priv** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @intc_irqpin_hwirq_mask(%struct.intc_irqpin_priv* %9, i32 %10, i32 %11)
  %13 = call i32 @intc_irqpin_write(%struct.intc_irqpin_priv* %7, i32 %8, i32 %12)
  ret void
}

declare dso_local i32 @intc_irqpin_write(%struct.intc_irqpin_priv*, i32, i32) #1

declare dso_local i32 @intc_irqpin_hwirq_mask(%struct.intc_irqpin_priv*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
